[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
make87 = { version = ">=0.1.2-dev0", features = ["zenoh", "protobuf", "rerun"] }
make87_messages = ">=0.2.8"
tokio = "1.44.1"
log = "0.4.27"
env_logger = "0.11.8"
rerun = "0.24.1"
zenoh = "1.4.0"
regex = "1.11.1"
ndarray = "0.16.1"
yuvutils-rs = "0.8.3"
